src/test/deca/avecObjet/invalid/class_name_conflict_builtin.deca
// Description :
// nom de classe en conflit avec un mot clé ou type de base
//
// Resultats :
//    Erreur contextuelle
//    Ligne 8 : Le nom de la classe int est interdit

class int { // doit échouer
}
